unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Aug_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Aug_Forecast_Amount__c</fullName>
    <label>Aug Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>