unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Brand_Quality__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quality</label>
    <referenceTo>Tags__c</referenceTo>
    <relationshipName>Forecast_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>