unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Feb_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Feb_Forecast_Amount__c</fullName>
    <label>Feb Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>