unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Nov_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Nov_Forecast_Amount__c</fullName>
    <label>Nov Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>