unpackaged/main/default/objects/Forecast_Snapshot__c/fields/User_Driven_Snapshot_Description__c.field-meta.xml
<CustomField>
    <fullName>User_Driven_Snapshot_Description__c</fullName>
    <description>Text field to hold description for user driven snapshot records created by the Snapshot button on the Forecast Snapshot tab</description>
    <label>User Driven Snapshot Description</label>
    <type>TextArea</type>
</CustomField>