unpackaged/main/default/objects/Forecast_Snapshot__c/recordTypes/User_Driven.recordType-meta.xml
<RecordType>
    <fullName>User_Driven</fullName>
    <active>true</active>
    <description>Record type to hold user driven snapshot records created from the button on the forecast snapshot tab</description>
    <label>User Driven</label>
</RecordType>