unpackaged/main/default/objects/Forecast_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Forecast_Date__c</columns>
    <columns>Forecast_Month__c</columns>
    <columns>Forecast_Year__c</columns>
    <columns>Brand_Quality__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>